<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent_constraint">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/tree_background"
        android:id="@+id/tree_info_first_background"
        android:scaleType="centerCrop"/>


    <!--<LinearLayout-->
        <!--android:id="@+id/linearLayout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="0dp"-->
        <!--android:gravity="start|top"-->
        <!--android:orientation="horizontal"-->
        <!--android:background="@color/appBackground"-->
        <!--app:layout_constraintTop_toTopOf="parent">-->

        <!--<ImageButton-->
            <!--android:id="@+id/add3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:background="?android:attr/colorBackground"-->
            <!--android:src="@drawable/icons8_plus_math_30" />-->
    <!--</LinearLayout>-->

    <!--android:background="#D9000000"-->
    <!--android:background="#E66F6F6F"-->



    <LinearLayout
        android:id="@+id/blackLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/tree_info_background_white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tree_info_first_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/user_add_tree_pic_appear_info"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:gravity="center"
            android:visibility="gone"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/CommonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textColor="@color/accent_gray"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/scientificName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textColor="@color/accent_gray"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/idLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tree ID:"
                android:textColor="@color/accent_gray"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/treeid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/accent_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dbhLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dbhTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="DBH:"
                android:textColor="@color/accent_gray"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageButton
                android:id="@+id/circum_info_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:layout_marginTop="5dp"
                android:maxWidth="20dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="2dp"
                android:src="@drawable/info_icon" />

            <TextView
                android:id="@+id/dbh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/accent_gray"
                android:textSize="20sp" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/latLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/latitudeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  Latitude: "
                android:textColor="@color/accent_gray"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/accent_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/longLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/longitudeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Longitude: "
                android:textColor="@color/accent_gray"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/accent_gray"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" View Notes "
                android:textColor="@color/white"
                android:id="@+id/view_notes_button"
                android:background="@color/new_invented_color"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text=" View Photos "
                android:layout_marginStart="5dp"
                android:background="@color/new_invented_color"
                android:id="@+id/view_photos_button"/>

        </LinearLayout>

        <com.shivam.library.imageslider.ImageSlider
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:id="@+id/view_photos_slider"
            android:visibility="gone"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_height="200dp"
            android:id="@+id/notes_scroller"
            android:background="#CCA8A7A7"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/notes_linear"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>




    </LinearLayout>
    <!--<ImageButton-->
        <!--android:id="@+id/add3"-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_gravity="start"-->
        <!--android:layout_marginStart="28dp"-->
        <!--android:layout_marginTop="28dp"-->
        <!--android:background="@drawable/transparent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--android:src="@drawable/icons8_plus_math_30" />-->

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/tree_info_first_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/new_invented_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"
            app:itemIconTint="@color/white"/>

    <TextView
        android:id="@+id/swipe_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="&lt;swipe for other information&gt;"
        android:textColor="@color/accent_gray"
        android:textSize="16sp"
        android:layout_marginBottom="87dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nearby_trees_spinner"
        android:popupBackground="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:visibility="gone">
    </Spinner>

</android.support.constraint.ConstraintLayout>